--- a/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
@@ -89,7 +89,7 @@
             </TabItem>
             <TabItem Header="All Securities">
                 <!-- A Datagrid with all securities that are NOT readonly. So they can be edited -->
-                <DataGrid Name="dgAllSecurities" ColumnWidth="*" ItemsSource="{Binding Path=dgSecurities}" 
+                <DataGrid Name="dgAllSecurities" ColumnWidth="*" ItemsSource="{Binding Path=dgSecurities, UpdateSourceTrigger=PropertyChanged}" 
                           RowBackground="GhostWhite" AlternatingRowBackground="White"
                           VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
                     <DataGrid.Columns>
