--- a/PortfolioAce/Views/Windows/AboutWindow.xaml
+++ b/PortfolioAce/Views/Windows/AboutWindow.xaml
@@ -48,9 +48,9 @@
             <Label>
                 <Hyperlink
 						   RequestNavigate="Link_RequestNavigate"
-						   NavigateUri="https://tldrlegal.com/license/mit-license">
+						   NavigateUri="https://tldrlegal.com/license/gnu-general-public-license-v3-(gpl-3)">
                     <TextBlock
-							   Text="MIT License"/>
+							   Text="GPL-3.0 License"/>
                 </Hyperlink>
             </Label>
         </StackPanel>
