--- a/PortfolioAce/Views/Windows/AboutWindow.xaml
+++ b/PortfolioAce/Views/Windows/AboutWindow.xaml
@@ -32,10 +32,10 @@
         <!-- Description -->
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="1" Margin="10,0,10,0">
             <TextBlock TextWrapping="Wrap" Text="© 2020 Ramon Williams" Margin="0,4,5,0"/>
-            <Label Margin="40,0,0,0">
+            <Label Margin="50,0,0,0">
                 <Hyperlink
 						   RequestNavigate="Link_RequestNavigate"
-						   NavigateUri="https://github.com/RamonWill">
+						   NavigateUri="https://github.com/RamonWill/PortfolioAce">
                     <TextBlock
 							   Text="Source Code"/>
                 </Hyperlink>
