--- a/PortfolioAce/Views/Windows/SettingsWindow.xaml
+++ b/PortfolioAce/Views/Windows/SettingsWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PortfolioAce.Views.Windows"
         xmlns:components="clr-namespace:PortfolioAce.Models.Components"
         mc:Ignorable="d"
-        Title="PortfolioAce Settings" Height="250" Width="450" ResizeMode="NoResize"  WindowStyle="ToolWindow">
+        Title="PortfolioAce Settings" Height="250" Width="500" ResizeMode="NoResize"  WindowStyle="ToolWindow">
     <Grid>
         <Grid.Resources>
             <!-- HERE i can set properties for all similar objects in the grid i.e. textboxes-->
@@ -55,7 +55,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TabControl TabStripPlacement="Left" Grid.Row="0" Grid.Column="0">
+        <TabControl TabStripPlacement="Left" Grid.Row="0" Grid.Column="0" Background="#f5f5f5">
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Template">
@@ -112,10 +112,11 @@
                     </Grid.RowDefinitions>
                     <Label Content="AlphaVantage API Key" FontWeight="Bold" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <components:BindablePasswordBox Password="{Binding AlphaVantageKey, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2"/>
-                    <Button Grid.Row="1" Grid.Column="5" Content="Show" FontSize="9" Width="55" Height="20" Style="{DynamicResource MaterialDesignFlatLightBgButton}" Margin="0,0,0,25"/>
+                    <Button Grid.Row="1" Grid.Column="5" Content="Show" FontSize="9" Width="55" Height="20" Style="{DynamicResource MaterialDesignFlatLightBgButton}" Margin="0,0,0,25" Command="{Binding ShowAlphaVantageKeyCommand}"/>
                     <Label Content="FMPrep API Key" FontWeight="Bold" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <components:BindablePasswordBox Password="{Binding FMPrepKey, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2"/>
-                    <Button Grid.Row="2" Grid.Column="5" Content="Show" FontSize="9" Width="55" Height="20" Style="{DynamicResource MaterialDesignFlatLightBgButton}" Margin="0,0,0,25"/>
+                    <Button Grid.Row="2" Grid.Column="5" Content="Show" FontSize="9" Width="55" Height="20" Style="{DynamicResource MaterialDesignFlatLightBgButton}" Margin="0,0,0,25" Command="{Binding ShowFMPKeyCommand}"/>
+                    <Button Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Content="Apply Changes" FontSize="10" Width="100" Style="{DynamicResource MaterialDesignFlatMidBgButton}" IsEnabled="{Binding enableUpdateSetting}"/>
                 </Grid>
             </TabItem>
         </TabControl>
