--- a/PortfolioAce/Views/Windows/AboutWindow.xaml
+++ b/PortfolioAce/Views/Windows/AboutWindow.xaml
@@ -30,17 +30,20 @@
         </Grid>
 
         <!-- Description -->
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="1" Margin="10,0,10,0">
-            <TextBlock TextWrapping="Wrap" Text="© 2020 Ramon Williams" Margin="0,4,5,0"/>
-            <Label Margin="50,0,0,0">
-                <Hyperlink
+        <Border BorderThickness="0,1,0,0" Grid.Column="0" Grid.Row="1" BorderBrush="DarkGray">
+            <StackPanel Orientation="Horizontal"  Margin="10,0,10,0">
+                <TextBlock TextWrapping="Wrap" Text="© 2020 Ramon Williams" Margin="0,4,5,0"/>
+                <Label Margin="50,0,0,0">
+                    <Hyperlink
 						   RequestNavigate="Link_RequestNavigate"
 						   NavigateUri="https://github.com/RamonWill/PortfolioAce">
-                    <TextBlock
+                        <TextBlock
 							   Text="Source Code"/>
-                </Hyperlink>
-            </Label>
-        </StackPanel>
+                    </Hyperlink>
+                </Label>
+            </StackPanel>
+        </Border>
+
 
 
         <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2">
