--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -117,6 +117,9 @@
                                         <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" 
                                             Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.PositionDetailsCommand}"
                                             CommandParameter="{Binding}">
+                                            <Button.ToolTip>
+                                                <TextBlock Text="{Binding Position.security.Symbol, StringFormat={}Position Breakdown for {0}}"/>
+                                            </Button.ToolTip>
                                             <Image Source="/PortfolioAce;component/Resources\icons8-positionBreakdown-24.png"/>
                                         </Button>
                                     </DataTemplate>
@@ -159,9 +162,15 @@
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}">
+                                                <Button.ToolTip>
+                                                    <TextBlock Text="Edit Trade"/>
+                                                </Button.ToolTip>
                                                 <Image Source="/PortfolioAce;component/Resources\icons8-editTrade-24.png"/>
                                             </Button> <!-- Edit -->
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" Margin="5,0,0,0">
+                                                <Button.ToolTip>
+                                                    <TextBlock Text="Delete Trade"/>
+                                                </Button.ToolTip>
                                                 <Image Source="/PortfolioAce;component/Resources\icons8-deleteTrade-24.png"/>
                                             </Button> <!-- Delete  (which deactivates the trade) -->
                                         </StackPanel>
