--- a/PortfolioAce/Views/Modals/EditTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/EditTradeWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PortfolioAce.Views.Modals.AddTradeWindow"
+﻿<Window x:Class="PortfolioAce.Views.Modals.EditTradeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
-        Title="Create a New Trade" Height="500" Width="410">
+        Title="Edit Trade" Height="500" Width="410">
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <Grid Margin="1">
             <Grid.Resources>
@@ -36,7 +36,7 @@
                                             <DataTemplate>
                                                 <TextBlock Foreground="Red" Text="{Binding ErrorContent}" />
                                             </DataTemplate>
-                                        </ItemsControl.ItemTemplate>                                        
+                                        </ItemsControl.ItemTemplate>
                                     </ItemsControl>
                                 </StackPanel>
                             </ControlTemplate>
@@ -64,15 +64,9 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Label Grid.Row="1">Trade Type:</Label>
-            <ComboBox ItemsSource="{Binding cmbTradeType}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=TradeType, UpdateSourceTrigger=PropertyChanged}">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding }"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
+            <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" Content="{Binding Path=TradeType, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Row="2">Symbol:</Label>
-            <TextBox Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+            <Label Content="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
             <Label Grid.Row="3">Quantity:</Label>
             <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
             <Label Grid.Row="4">Price:</Label>
@@ -95,8 +89,7 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <Button Command="{Binding AddTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Add Trade</Button>
+            <Button Command="{Binding EditTradeCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Edit Trade</Button>
         </Grid>
     </Border>
-
 </Window>
