--- a/PortfolioAce/Views/Modals/FundMetricsWindow.xaml
+++ b/PortfolioAce/Views/Modals/FundMetricsWindow.xaml
@@ -4,9 +4,43 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="Fund Metrics" Height="500" Width="510">
-    <Grid>
-        
-    </Grid>
+        Title="Fund Metrics" Height="500" Width="710">
+    <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
+        <Grid Margin="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/> 
+            </Grid.RowDefinitions>
+            <lvc:CartesianChart Grid.Row="0" Grid.Column="0">
+                <lvc:CartesianChart.Series>
+                    <lvc:LineSeries Title="Fund Performance" Values="{Binding NavPriceLineChartYAxis}"/>
+                </lvc:CartesianChart.Series>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Date" Labels="{Binding NavPriceLineChartXAxis}" FontSize="12"/>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Nav per share"/>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
+            <lvc:PieChart Grid.Row="1" Grid.Column="0" Series="{Binding PieChartData}" InnerRadius="50" LegendLocation="Bottom" Hoverable="False">
+            </lvc:PieChart>
+            <lvc:CartesianChart Grid.Row="1" Grid.Column="1">
+                <lvc:CartesianChart.Series>
+                    <lvc:RowSeries Title="Best Performing Positions"/>
+                </lvc:CartesianChart.Series>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Salesman"/>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Sold Apps"/>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
+        </Grid>
+    </Border>
 </Window>
